--- a/catalogue/era5/ecv-for-climate-change/__item__.yaml
+++ b/catalogue/era5/ecv-for-climate-change/__item__.yaml
@@ -55,13 +55,37 @@ properties:
   cube:variables:
     t2m:
       dimensions:
-      - time
+      - valid_time
       - latitude
       - longitude
       type: data
       description: 2 metre temperature
       unit: K
-  dc:extent: 2 GB
+    r:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Relative humidity
+      unit: '%'
+    siconc:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Sea ice area fraction
+      unit: (0 - 1)
+    tp:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Total precipitation
+      unit: m
+  dc:extent: 9 GB
 assets:
   data:
     href: https://data.earthdatahub.destine.eu/more-era5/ecv-for-climate-change-1981-2010-anomaly-v0
