--- a/catalogue/era5/ecv-for-climate-change/__item__.yaml
+++ b/catalogue/era5/ecv-for-climate-change/__item__.yaml
@@ -16,7 +16,7 @@ bbox:
 properties:
   start_datetime: '1979-01-01T00:00:00Z'
   end_datetime: '2024-08-01T00:00:00Z'
-  edh:maturity: draft
+  edh:maturity: published
   dc:abstract: The Essential Climate Variables from 1979 to present dataset contains
     a selection of climatologies, monthly anomalies and monthly mean fields for monitoring
     and assessment of climate variability and change
