--- a/catalogue/era5/reanalysis-era5-single-levels-monthly-means/ingestion/ingestion-steps.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels-monthly-means/ingestion/ingestion-steps.yaml
@@ -48,14 +48,16 @@ steps:
       time: [ '00:00' ]
       product_type: monthly_averaged_reanalysis
       variable: [
+        # not the last one (has 06:00å)
+        "total_precipitation",
+
         "10m_u_component_of_wind",
         "10m_v_component_of_wind",
         "2m_dewpoint_temperature",
         "2m_temperature",
         "mean_sea_level_pressure",
         "sea_surface_temperature",
-        "surface_pressure",
-        "total_precipitation"
+        "surface_pressure"
       ]
     request_chunker_kwargs: { time_dim: valid_time }
 
