--- a/catalogue/copernicus-dem-utm/templates/GLO-30-UTM-N/GLO-30-UTM-{{cookiecutter.utm_zone}}/__item__.yaml
+++ b/catalogue/copernicus-dem-utm/templates/GLO-30-UTM-N/GLO-30-UTM-{{cookiecutter.utm_zone}}/__item__.yaml
@@ -13,6 +13,7 @@ bbox:
 - {{ cookiecutter.utm_zone[:-1]|int * 6.0 - 180  }}
 - 84.0
 properties:
+  edh:maturity: published
   start_datetime: '2022-01-01T12:00:00Z'
   end_datetime: '2022-01-01T12:00:00Z'
   dc:abstract: Copernicus DEM Global 30m resampled on a 20m grid on UTM {{ cookiecutter.utm_zone }}
