--- a/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/__collection__.yaml
+++ b/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/__collection__.yaml
@@ -4,7 +4,7 @@ dc:abstract:
   through the provision of innovative climate information on multi-decadal timescales, 
   at scales at which the impacts of climate change are observed. 
   This initiative presents the first ever attempt to operationalise the production of 
-  global multi-decadal climate projections at km-scale resolutions of 5 to 10km.
+  global multi-decadal climate projections at km-scale resolutions of 5 to 10km TEST.
 edh:maturity: draft
 links:
 - title: DestinE Digital Twin for Climate Change Adaptation
