--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/0001-high-sfc-ICON-monthly/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/0001-high-sfc-ICON-monthly/__item__.yaml
@@ -8,17 +8,17 @@ bbox:
 - -90.0
 - 180.0
 - 90.0
-assets:
-  data:
-    href: https://cacheb.dcms.destine.eu/d1-climate-dt/ScenarioMIP-SSP3-7.0-ICON-0001-high-sfc-monthly-v0.zarr
-    roles:
-    - data
-    xarray:open_kwargs:
-      engine: zarr
-      chunks: {}
-    xarray:storage_options:
-      client_kwargs:
-        trust_env: true
+# assets:
+#   data:
+#     href: https://cacheb.dcms.destine.eu/d1-climate-dt/ScenarioMIP-SSP3-7.0-ICON-0001-high-sfc-monthly-v0.zarr
+#     roles:
+#     - data
+#     xarray:open_kwargs:
+#       engine: zarr
+#       chunks: {}
+#     xarray:storage_options:
+#       client_kwargs:
+#         trust_env: true
 search_weight: 63
 properties:
   edh:maturity: published
