--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-o2d/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-o2d/__item__.yaml
@@ -8,17 +8,17 @@ bbox:
 - -90.0
 - 180.0
 - 90.0
-# assets:
-#   data:
-#     href: https://cacheb.dcms.destine.eu/d1-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-o2d-v0.zarr
-#     roles:
-#     - data
-#     xarray:open_kwargs:
-#       engine: zarr
-#       chunks: {}
-#     xarray:storage_options:
-#       client_kwargs:
-#         trust_env: true
+assets:
+  data:
+    href: https://cacheb.dcms.destine.eu/d1-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-o2d-v0.zarr
+    roles:
+    - data
+    xarray:open_kwargs:
+      engine: zarr
+      chunks: {}
+    xarray:storage_options:
+      client_kwargs:
+        trust_env: true
 search_weight: 64
 properties:
   edh:maturity: published
@@ -61,22 +61,6 @@ properties:
       - -180.0
       - 180.0
   cube:variables:
-    avg_hc300m:
-      dimensions:
-      - time
-      - latitude
-      - longitude
-      type: data
-      description: Time-mean vertically-integrated heat content in the upper 300 m
-      unit: J m**-2
-    avg_hc700m:
-      dimensions:
-      - time
-      - latitude
-      - longitude
-      type: data
-      description: Time-mean vertically-integrated heat content in the upper 700 m
-      unit: J m**-2
     avg_siconc:
       dimensions:
       - time
@@ -117,30 +101,6 @@ properties:
       type: data
       description: Time-mean sea ice volume per unit area
       unit: m**3 m**-2
-    avg_six:
-      dimensions:
-      - time
-      - latitude
-      - longitude
-      type: data
-      description: Time-mean X-component of sea ice velocity
-      unit: m s**-1
-    avg_siy:
-      dimensions:
-      - time
-      - latitude
-      - longitude
-      type: data
-      description: Time-mean Y-component of sea ice velocity
-      unit: m s**-1
-    avg_snvol:
-      dimensions:
-      - time
-      - latitude
-      - longitude
-      type: data
-      description: Time-mean snow volume over sea ice per unit area
-      unit: m**3 m**-2
     avg_sos:
       dimensions:
       - time
@@ -165,4 +125,4 @@ properties:
       type: data
       description: Time-mean sea surface height
       unit: m
-  dc:extent: 6.4 TB
+  dc:extent: 3.9 TB
