--- a/catalogue/era5/reanalysis-era5-pressure-levels/ingestion/single-ingestion-step.yaml
+++ b/catalogue/era5/reanalysis-era5-pressure-levels/ingestion/single-ingestion-step.yaml
@@ -8,7 +8,7 @@ steps:
     filename_or_obj:
       area: ['90', '0', '-90', '360']
       dataset: reanalysis-era5-pressure-levels
-      date: [1940-01-01/2023-12-31]
+      date: [1940-01-01/2024-11-30]
       time: ['00:00', '01:00', '02:00', '03:00', '04:00', '05:00', '06:00', '07:00', '08:00', '09:00', '10:00', '11:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00', '23:00']
       product_type: reanalysis
       pressure_level: [1000, 925, 850, 700, 600, 500, 400, 300, 250, 200, 150, 100, 70, 50, 30, 20, 10, 5, 1]
@@ -36,7 +36,8 @@ steps:
     client_kwargs: {key: d9d3dcf2-52bc-4410-8224-8b7592777c34, url: https://cds.climate.copernicus.eu/api}
 
   chunks: {latitude: 256, longitude: 256}
-  robust_to_zarr_kwargs: {restart_dim: valid_time, restart_block_size: 2, retries: 3}
+  robust_to_zarr_kwargs: {restart_dim: valid_time, restart_block_size: 1, retries: 3}
   to_zarr_kwargs: {
     store: s3://edc-era5/reanalysis-era5-pressure-levels-v0-dev.zarr,
+    chunk_store: s3://edc-era5/reanalysis-era5-pressure-levels-v0.zarr,
   }
