--- a/catalogue/sentinel-1-rtc/__collection__.yaml
+++ b/catalogue/sentinel-1-rtc/__collection__.yaml
@@ -10,18 +10,19 @@ links:
 extent:
   spatial:
     bbox:
-    - - -180
-      - -90
-      - 180
-      - 90
+    - - 6.75
+      - 36.62
+      - 18.48
+      - 47.11
   temporal:
     interval:
-    - - "2023-01-01T00:00:00Z"
-      - "2024-01-01T00:00:00Z"
+    - - "2024-01-01T00:00:00Z"
+      - "2025-01-01T00:00:00Z"
 license: other
 keywords:
 - Copernicus
 - Sentinel-1
+- geobrowser
 providers:
 - name: European Union
   roles:
@@ -39,4 +40,4 @@ providers:
   roles:
   - host
   url: https://platform.destine.eu
-search_weight: 20
+search_weight: 40
