--- a/catalogue/era5/ecv-for-climate-change/__item__.yaml
+++ b/catalogue/era5/ecv-for-climate-change/__item__.yaml
@@ -22,7 +22,7 @@ assets:
         trust_env: true
 search_weight: 90
 properties:
-  datetime: '2024-10-01T00:00:00Z'
+  datetime: '2024-12-01T00:00:00Z'
   start_datetime: '1979-01-01T00:00:00Z'
   end_datetime: '2024-12-01T00:00:00Z'
   edh:maturity: published
@@ -39,11 +39,11 @@ properties:
   - climate
   dc:accrual_periodicity: freq:monthly
   cube:dimensions:
-    time:
+    valid_time:
       type: temporal
       extent:
       - '1979-01-01T00:00:00Z'
-      - '2024-08-01T00:00:00Z'
+      - '2024-12-01T00:00:00Z'
       step: P1M
     latitude:
       type: spatial
