--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-o2d/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-o2d/__item__.yaml
@@ -29,7 +29,7 @@ properties:
   dc:title: Climate DT, ScenarioMIP, SSP3-7.0, IFS-NEMO, daily data on ocean and sea-ice
   dc:description: High resolution Climate DT daily on ocean single levels - SSP3-7.0
     - IFS-NEMO
-  datetime: '2020-01-01T00:00:00Z'
+  datetime: '2029-12-31T00:00:00Z'
   start_datetime: '2020-01-01T00:00:00Z'
   end_datetime: '2029-12-31T00:00:00Z'
   dc:subject:
@@ -40,9 +40,10 @@ properties:
   cube:dimensions:
     time:
       type: temporal
+      axis: t
       extent:
-      - null
-      - null
+      - '2020-01-01T00:00:00Z'
+      - '2029-12-31T00:00:00Z'
       step: PT1D
     latitude:
       type: spatial
