--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-pl/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-pl/__item__.yaml
@@ -28,7 +28,7 @@ properties:
   dc:access_rights: restricted
   dc:title: Climate DT, ScenarioMIP, SSP3-7.0, IFS-NEMO, hourly data on pressure-levels
   dc:description: High resolution Climate DT on pressure levels - SSP3-7.0 - IFS-NEMO
-  datetime: '2020-01-01T00:00:00Z'
+  datetime: '2029-12-31T23:00:00Z'
   start_datetime: '2020-01-01T00:00:00Z'
   end_datetime: '2029-12-31T23:00:00Z'
   dc:subject:
@@ -39,9 +39,10 @@ properties:
   cube:dimensions:
     time:
       type: temporal
+      axis: t
       extent:
-      - null
-      - null
+      - '2020-01-01T00:00:00Z'
+      - '2029-12-31T23:00:00Z'
       step: PT1H
     latitude:
       type: spatial
