--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc/__item__.yaml
@@ -29,7 +29,7 @@ properties:
   dc:title: Climate DT, ScenarioMIP, SSP3-7.0, IFS-NEMO, hourly data on single-levels
   dc:description: High resolution Climate DT hourly on single levels - SSP3-7.0 -
     IFS-NEMO
-  datetime: '2020-01-01T00:00:00Z'
+  datetime: '2039-12-31T23:00:00Z'
   start_datetime: '2020-01-01T00:00:00Z'
   end_datetime: '2039-12-31T23:00:00Z'
   dc:subject:
@@ -40,9 +40,10 @@ properties:
   cube:dimensions:
     time:
       type: temporal
+      axis: t
       extent:
-      - null
-      - null
+      - '2020-01-01T00:00:00Z'
+      - '2039-12-31T23:00:00Z'
       step: PT1H
     latitude:
       type: spatial
