--- a/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/IW-UTM-RO-italy-{{cookiecutter.utm_zone}}-{{cookiecutter.relative_orbit}}/__item__.yaml
+++ b/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/IW-UTM-RO-italy-{{cookiecutter.utm_zone}}-{{cookiecutter.relative_orbit}}/__item__.yaml
@@ -11,6 +11,8 @@ bbox:
 properties:
   edh:maturity: draft
   datetime: '2022-01-01T12:00:00Z'
+  start_datetime: '2024-01-11T00:00:00Z'
+  end_datetime: '2024-12-24T00:00:00Z'
   dc:abstract: Sentinel-1 ARD for relative orbit {{ cookiecutter.relative_orbit }} on UTM {{ cookiecutter.utm_zone }}
   dc:access_rights: unrestricted
   dc:title: Sentinel-1 ARD for relative orbit {{ cookiecutter.relative_orbit }} on UTM {{ cookiecutter.utm_zone }}
@@ -19,6 +21,12 @@ properties:
   - Copernicus
   - Sentinel-1
   cube:dimensions:
+    date:
+      type: temporal
+      axis: t
+      extent:
+      - '2024-01-11T00:00:00Z'
+      - '2024-12-24T00:00:00Z'
     y:
       type: spatial
       axis: y
@@ -38,12 +46,14 @@ properties:
   cube:variables:
     gtc:
       dimensions:
+      - date
+      - polarization
       - y
       - x
       type: data
       description: beta nought
       unit: m2 m-2
-  dc:extent: 100 GB
+  dc:extent: 1.9 TB
 assets:
   data:
     href: https://data.earthdatahub.destine.eu/sentinel-1-ard/IW-UTM-RO-italy-v0/{{ cookiecutter.utm_zone }}/{{ cookiecutter.relative_orbit }}
