--- a/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/contexts.yaml
+++ b/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/contexts.yaml
@@ -2,6 +2,11 @@ contexts:
 - utm_zone: 32N
   relative_orbit: 15
 - utm_zone: 32N
+  relative_orbit: 22
+- utm_zone: 32N
   relative_orbit: 117
 - utm_zone: 33N
   relative_orbit: 117
+- utm_zone: 33N
+  relative_orbit: 22
+  
